--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@ dist-ssr
 .env.local
 .env.*.local
 
+# Sensitive components with hardcoded credentials
+src/components/EmailSettings.tsx
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
